# napari-ehooke

./: README.md  setup.cfg  tox.ini
src/napari_ehooke/: cell_manager.py  ehooke.py  image_manager.py  napari.yaml  segmentation_manager.py
src/napari_ehooke/_tests/: test_widget.py
